[workspace]

[package]
name = "trylib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pegasus = { path = "../pegasus" }
pegasus_server = { path = "../server" }

[lib]
name = "trylib"
crate-type = ["dylib"]